Fixed bottom boxes, need to fix the top with spacing, colors, and mobile design

--- a/social-proof-section-master/style.css
+++ b/social-proof-section-master/style.css
@@ -26,8 +26,8 @@ h1 {
 }
 .head {
     font-size: 60px;
-    color: hsl(300, 43%, 22%);
-    font-weight: bold;
+    color: hwb(300 13% 69%);
+    font-weight: 700;
 }
 .reviews {
     
@@ -67,7 +67,7 @@ h1 {
     width: 250px;
 }
 .bottom {
-    margin: 10%;
+    margin: 9%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -77,9 +77,18 @@ h1 {
     background-color: hsl(300, 43%, 22%);
     padding: 25px;
     width: 27%;
+    min-width: 250px;
+    border-radius: 10px;
 }
 
-
+.profile {
+    margin-left: 10px;
+    margin-top: 15px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
 .profile-pic img {
     width: 40px;
     height: 40px;
@@ -87,12 +96,51 @@ h1 {
 }
 .quote, .profile-name{
     color: hsl(300, 24%, 96%);
-;
+}
+
+.quote {
+    margin-left: 10px;
+    margin-bottom: 15px;
+    margin-right: 10px;
+    line-height: 1.5;
+    letter-spacing:.5px;
 }
 .profile-name {
     font-weight: bold;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 .profile-verified {
     color: hsl(333, 80%, 67%);
+    display: flex;
+    flex-wrap: nowrap; 
+
+}
+.profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    min-width: 150px;
+}
+.testimonial1 {
+    margin-top: -20px;
+    margin-bottom: 40px;
+}
+
+.testimonial2 {
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+
+.testimonial3 {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+@font-face {
+    font-family: league spartan;
+    src: url(https://fonts.google.com/specimen/League+Spartan);
 
 }
